--- a/sample/src/main/res/values/styles.xml
+++ b/sample/src/main/res/values/styles.xml
@@ -24,14 +24,14 @@
 <resources>
 
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat.DayNight.DarkActionBar">
+    <style name="AppTheme" parent="Theme.AppCompat.DayNight.NoActionBar">
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
-    <style name="Material" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+    <style name="Material" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <item name="colorPrimary">@color/primaryColor</item>
         <item name="colorPrimaryDark">@color/primaryDarkColor</item>
         <item name="colorAccent">@color/secondaryColor</item>
@@ -59,6 +59,12 @@
 
     <style name="MaterialTextFieldFilledDense" parent="Widget.MaterialComponents.TextInputLayout.FilledBox.Dense">
         <!-- customize -->
+    </style>
+
+    <!-- Menu item style for theme switching -->
+    <style name="MenuItemStyle">
+        <item name="android:colorBackground">@color/menu_popup_background_color</item>
+        <item name="android:textColor">@color/menu_item_text_color</item>
     </style>
 
     <!-- Customize CardForm -->
